# galapy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  INSTALL.rst  MANIFEST.in  README.rst  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt  setup.py  tests.yml
.github/workflows/: build-wheels.yml  python-package.yml  tests.yml
c++/csp/include/: csp.h
c++/csp/src/: cpy_csp.cpp  csp.cpp
c++/imf/include/: imf.h
c++/ism/include/: ism.h  pah.h
c++/ism/src/: cpy_ism.cpp  ism.cpp
c++/rad/include/: nff.h  syn.h
c++/sfh/include/: sfh.h  sfh_base.h  sfh_empirical.h  sfh_interpolated.h
c++/sfh/src/: sfh_base.cpp
c++/utl/include/: interpolation.h  interval_tree.h  serialize.h  transmission.h  utilities.h
c++/utl/include/ibstree/: node.tpp
c++/utl/include/interp/: base_interface.h  ibstree_interface.h
c++/utl/src/: cpy_interpolation.cpp
csp/include/: csp.h
csp/src/: cpy_csp.cpp  csp.cpp
doc/: Makefile  conf.py  fix_internal_links.py  index.rst  python_doc.rst  requirements.txt
doc/_static/: theme_overrides.css
doc/general/: flux_diagram.rst  free_parameters.rst  physical_units.rst  quickstart.rst
doc/guides/: choose_ssp_lib.rst  parameter_file.rst  photometric_fit.rst
doc/notebooks/: CSP_tutorial.ipynb  ISM_tutorial.ipynb  SFH_tutorial.ipynb  choose_ssp_lib.ipynb  interpolated_gxy.ipynb  load_catalogue.ipynb  load_topcat_catalogue.ipynb  results_analysis.ipynb
doc/notebooks/data/: sampling_4D+noise_dynesty_results_light.galapy.hdf5
doc/python_doc/: CSP.rst  ISM.rst  SFH.rst  api_toctree.rst  components.rst  galapy.rst
doc/tutorials/: physics_modules.rst
galapy/: ActiveGalacticNucleus.py  CompositeStellarPopulation.py  Cosmology.py  Galaxy.py  GalaxyParameters.py  Handlers.py  InterGalacticMedium.py  InterStellarMedium.py  NebularFreeFree.py  Noise.py  PhotometricSystem.py  StarFormationHistory.py  Synchrotron.py  Test_Sfh.py~  XRayBinaries.py  __init__.py
galapy/analysis/: __init__.py  funcs.py  model_comparison.py  plot.py
galapy/configuration/: __init__.py  configure.py  filesystem.py
galapy/internal/: __init__.py  abc.py  constants.py  data.py  globs.py  utils.py
galapy/internal/data/AGN_templates/: ct20al0.0be-0.25ta0.1rm100ia0.001  ct20al0.0be-0.25ta0.1rm100ia10.100  ct20al0.0be-0.25ta0.1rm100ia20.100  ct20al0.0be-0.25ta0.1rm100ia30.100  ct20al0.0be-0.25ta0.1rm100ia40.100  ct20al0.0be-0.25ta0.1rm100ia50.100  ct20al0.0be-0.25ta0.1rm100ia60.100  ct20al0.0be-0.25ta0.1rm100ia70.100  ct20al0.0be-0.25ta0.1rm100ia80.100  ct20al0.0be-0.25ta0.1rm100ia89.990  ct20al0.0be-0.25ta0.1rm10ia0.001  ct20al0.0be-0.25ta0.1rm10ia10.100  ct20al0.0be-0.25ta0.1rm10ia20.100  ct20al0.0be-0.25ta0.1rm10ia30.100  ct20al0.0be-0.25ta0.1rm10ia40.100  ct20al0.0be-0.25ta0.1rm10ia50.100  ct20al0.0be-0.25ta0.1rm10ia60.100  ct20al0.0be-0.25ta0.1rm10ia70.100  ct20al0.0be-0.25ta0.1rm10ia80.100  ct20al0.0be-0.25ta0.1rm10ia89.990  ct20al0.0be-0.25ta0.1rm150ia0.001  ct20al0.0be-0.25ta0.1rm150ia10.100  ct20al0.0be-0.25ta0.1rm150ia20.100  ct20al0.0be-0.25ta0.1rm150ia30.100  ct20al0.0be-0.25ta0.1rm150ia40.100  ct20al0.0be-0.25ta0.1rm150ia50.100  ct20al0.0be-0.25ta0.1rm150ia60.100  ct20al0.0be-0.25ta0.1rm150ia70.100  ct20al0.0be-0.25ta0.1rm150ia80.100  ct20al0.0be-0.25ta0.1rm150ia89.990  ct20al0.0be-0.25ta0.1rm30ia0.001  ct20al0.0be-0.25ta0.1rm30ia10.100  ct20al0.0be-0.25ta0.1rm30ia20.100  ct20al0.0be-0.25ta0.1rm30ia30.100  ct20al0.0be-0.25ta0.1rm30ia40.100  ct20al0.0be-0.25ta0.1rm30ia50.100  (+23965 more)
galapy/io/: hdf5.py
galapy/sampling/: Observation.py  Results.py  Run.py  Sampler.py  Statistics.py  __init__.py
imf/src/: imf.cpp
ism/include/: ism.h  pah.h
ism/src/: cpy_ism.cpp  ism.cpp
notebooks/: CSP_tutorial.ipynb  GXY.ipynb  ISM_tutorial.ipynb  SFH_tutorial.ipynb
pybind11/: pyb11_CCSP.cpp  pyb11_CISM.cpp  pyb11_CNFF.cpp  pyb11_CSFH.cpp  pyb11_CSYN.cpp  pyb11_interpolation.cpp  pyb11_serialize.h  pyb11_transmission.cpp
rad/include/: nff.h  syn.h
rad/src/: cpy_nff.cpp  cpy_syn.cpp
sfh/include/: sfh.h  sfh_base.h  sfh_empirical.h  sfh_insitu.h
sfh/src/: cpy_sfh.cpp  sfh_base.cpp  sfh_insitu.cpp
tests/: #testIsm.py#  Test_Agn.py  Test_Csm.py  Test_Csp.py  Test_Gxy.py  Test_GxyPar.py  Test_Internal_Constants.py  Test_Internal_Interp.py  Test_Internal_Utils.py  Test_Ism.py  Test_Nff.py  Test_Pms.py  Test_Run.py  Test_SFH_core.py  Test_Sfh.py  Test_Sfh.py~  Test_Syn.py  Test_Xrb.py  Untitled.ipynb  test.py~  testcsp.py~  testsfh.py~
utl/include/: cpy_serialize.h  cpy_utilities.h  interpolation.h  serialize.h  transmission.h  utilities.h
utl/include/ibstree/: ibstree.h  ibstree.tpp  interval.h  iterator.h  node.h  node.tpp
utl/include/interp/: base_interface.h  ibstree_interface.h
utl/src/: cpy_interpolation.cpp  cpy_transmission.cpp  utilities.cpp
(+4 files in other folders)
