# pyproject.toml

[build-system]
requires = [
    "setuptools", "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "galapy"
authors = [{ name = "Tommaso Ronconi", email = "tronconi@sissa.it" }]
readme = "README.rst"
#license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/TommasoRonconi/galapy"
# Documentation = "https://galapy.readthedocs.io"

[project.optional-dependencies]
test = ["pytest"]
doc = [
    "sphinx",
    "nbsphinx",
    'sphinx.ext.autodoc',
    'sphinx.ext.coverage',
    'sphinx.ext.napoleon',
    'sphinx.ext.autosummary',
    'sphinx.ext.graphviz'
]

[tool.setuptools]
py_modules = ["galapy"]
install_requires = [
    "numpy",
    "scipy",
    "emcee",
    "dynesty",
    "matplotlib",
    "getdist",
    "requests",
    "h5py",
    "pytest"
]
requires-python = ">=3.6"

[tool.setuptools.extension]
# Specify options for building pybind11 extensions
sources = [
    "pybind11/*.cpp",
    "c++/utl/src/*.cpp",
    "c++/sfh/src/*.cpp",
    "c++/imf/src/*.cpp",
    "c++/csp/src/*.cpp",
    "c++/ism/src/*.cpp",
    "c++/rad/src/*.cpp",
]
include_dirs = [
    "c++/utl/include",
    "c++/sfh/include",
    "c++/imf/include",
    "c++/csp/include",
    "c++/ism/include",
    "c++/rad/include",
    "pybind11"
]
libraries = ["m"]
extra_compile_args = ["-std=c++17"]

[project.scripts]
galapy-fit = "galapy.sampling.Run:_run"
galapy-genparams = "galapy.sampling.Run:_generate_parameter_file"
galapy-download-database = "galapy.internal.data:_entrypoint_download_database"
