# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11>=2.10.0",
    'numpy',
    'scipy',
    'tqdm',
    'emcee',
    'dynesty',
    'matplotlib',
    'getdist',
    'requests',
    'h5py'
]
build-backend = "setuptools.build_meta"

[project]
name = "galapy"
authors = [{ name = "Tommaso Ronconi", email = "tronconi@sissa.it" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/TommasoRonconi/galapy"
Documentation = "http://galapy.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest"]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "jinja>=3.0.0",
    "nbsphinx",
    "graphviz"
]

[project.scripts]
galapy-fit = "galapy.sampling.Run:_run"
galapy-genparams = "galapy.sampling.Run:_generate_parameter_file"
galapy-download-database = "galapy.internal.data:_entrypoint_download_database"

[bumpver]
current_version = "v0.4.0"
version_pattern = "vMAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"galapy/__init__.py" = [
    "__version__ = '{version}'",
]
